<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_music_shop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.android.onmusic.MusicShop">

    <TextView
        android:text="@string/music_shop"
        style="@style/RightTop"
        android:id="@+id/textInformation" />

    <Button
        android:text="@string/go_back"
        style="@style/LeftTop"
        android:id="@+id/GoBack2" />

    <TextView
        android:text="@string/information_describe"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@id/textInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />
</RelativeLayout>
