<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.android.onmusic.MainActivity">

    <TextView
        style="@style/RightTop"
        android:text="@string/home_page"
        android:id="@+id/HomePage"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/HomePage"
        >

        <ScrollView
            style="@style/HomepageScroll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:text="@string/local_music_describe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/local_music_describe" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            style="@style/HomepageScroll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:text="@string/music_shop_describe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/music_shop_describe" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>
